Вирівнює іконки в Header

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -138,6 +138,7 @@ img {
 
 .header-contacts {
   display: flex;
+  align-items: center;
   padding-top: 32px;
   padding-bottom: 32px;
   font-weight: 500;
